# synesthesia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-and-release.yml
cmake/: dependencies.cmake  optimisations.cmake  platform.cmake  sources.cmake  vendor.cmake
meta/: Info.plist.in
meta/icon/: app.icns
src/: audio_input.h  audio_input.mm  colour_mapper.mm  fft_processor.h  fft_processor.mm  main.cpp  main.mm  ui.cpp  ui.h  version.h.in
src/api/: README.md  synesthesia_api_integration.cpp  synesthesia_api_integration.h
src/api/client/: api_client.h  example_client.cpp
src/api/common/: serialisation.cpp  serialisation.h  transport.cpp  transport.h
src/api/examples/: README.md  fetch.py  synesthesia_client.py  websocket_bridge.py
src/api/protocol/: colour_data_protocol.h
src/api/server/: api_server.cpp  api_server.h
src/audio/: audio_input.cpp  audio_input.h  audio_processor.cpp  audio_processor.h
src/cli/: cli.cpp  cli.h  headless.cpp  headless.h
src/colour/: colour_mapper.cpp  colour_mapper.h  colour_mapper_neon.cpp  colour_mapper_neon.h
src/fft/: fft_processor.cpp  fft_processor.h  fft_processor_neon.cpp  fft_processor_neon.h
src/metal/: main.mm
src/renderers/dx12/: app.rc  main.cpp
src/renderers/metal/: main.mm
src/renderers/vulkan/: main.cpp
src/ui/: smoothing.cpp  smoothing.h
src/ui/controls/: controls.cpp  controls.h
src/ui/device_manager/: device_manager.cpp  device_manager.h
src/ui/smoothing/: smoothing.cpp  smoothing.h
src/ui/spectrum_analyser/: spectrum_analyser.cpp  spectrum_analyser.h
src/ui/styling/: styling.cpp  styling.h
src/ui/styling/system_theme/: system_theme_detector.cpp  system_theme_detector.h  system_theme_detector.mm
src/ui/updating/: update.cpp  update.h
src/zero_crossing/: zero_crossing.cpp  zero_crossing.h
